orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/Estimate_Response__c.object-meta.xml
<CustomObject>
    <label>Estimate Response</label>
    <pluralLabel>Estimate Responses</pluralLabel>
    <description>Stores all estimation responses generated by the claim-estimator org. Linked to the originating Estimate Request and contains the full estimation result.</description>
    <nameField>
        <label>Response Number</label>
        <type>AutoNumber</type>
        <displayFormat>RES-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>