orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>Confidence Score</label>
    <description>AI confidence percentage for this estimation between 0 and 100</description>
    <inlineHelpText>Shows the AI model's confidence level in this estimation as a percentage</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>