orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <description>Recommended decision based on estimation rules. Approve for straightforward claims, Review for borderline cases, Reject for invalid claims</description>
    <inlineHelpText>Select the recommended decision: Approve for straightforward claims, Review for borderline cases, Reject for invalid claims</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>