orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Estimate_Request__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Request__c</fullName>
    <label>Estimate Request</label>
    <description>Lookup to the originating Estimate Request record</description>
    <inlineHelpText>Links this response to the estimation request that triggered it</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Estimate_Request__c</referenceTo>
    <relationshipLabel>Estimate Responses</relationshipLabel>
    <relationshipName>Estimate_Responses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>