orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <description>The calculated estimated cost of the claim in Australian Dollars</description>
    <inlineHelpText>Enter the estimated repair or replacement cost in AUD</inlineHelpText>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>