orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <label>Raw Response</label>
    <description>The full raw JSON response payload returned by the estimation engine</description>
    <inlineHelpText>Contains the complete JSON response from the estimation engine for debugging and audit purposes</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>