orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Response_Timestamp__c</fullName>
    <label>Response Timestamp</label>
    <description>The exact date and time this estimation response was generated</description>
    <inlineHelpText>Records when the estimation response was generated by the claim-estimator org</inlineHelpText>
    <type>DateTime</type>
</CustomField>