orgs/claim-estimator/force-app/main/default/objects/Estimate_Response__c/fields/Rule_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rule_Applied__c</fullName>
    <label>Rule Applied</label>
    <description>The name of the estimation rule that was applied to calculate this result</description>
    <inlineHelpText>Enter the name or identifier of the estimation rule used to calculate this response</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>